refactor main loop to optimize loop unrolling